--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
           left: 250px;
         }
         #viewChanged {
-            display: none;
-            background-color: red;
-            color: white;
+          display: none;
+          background-color: red;
+          color: white;
         }
         #drone-land {
           display: none;
+          position: relative;
+          top: -300px;
+          margin-left: auto;
+          margin-right: auto;
+          height: 150px;
+          width: 150px;
         }
     </style>
 
@@ -41,7 +47,7 @@
   <div id="cesiumContainer" class="fullSize"></div>
   <div id="loadingOverlay"><h1>Loading...</h1></div>
   <div id="toolbar"><div id="viewChanged">View Changed</div></div>
-  <div id="drone-land"><img src="Source/droneland.gif"></div>
+  <div id="drone-land"><img src="Source/drone_blue.png"></div>
   <footer>
     <script type="text/javascript" src="/Source/Sandcastle-header.js"></script>
     <script src="ThirdParty/Cesium/Cesium.js"></script>
