--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           z-index: 10000000;
         }
         #notifications {
+          display: none;
           padding: 10px 20px;
           width: 33%;
           position: absolute;
@@ -88,6 +89,9 @@
           position: relative;
           width: 100%;
           height: 100%;
+        }
+        #toolbar {
+          display: none;
         }
     </style>
 
