halting flight if less than 20 miles from no-fly zone

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <div id="container">
   <div id="notifications" class="alert-blackgloss notifications top-left">
     <div id="no-drone-zone"><img src="Source/no_drone_zone.png"></img>
-      <div id="message">You are approaching a no-fly zone: divert your course.</div>
+      <div id="message">You are approaching a no-fly zone. Divert your course.</div>
       <div id="close" class="close"></div>
     </div>
   </div>
