re-style notify div

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
           display: block;
           float: right;
           width: 40%;
+          position: relative;
+          top: 20px;
         }
         #no-drone-zone img {
           width: 110px;
