--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Cesium Demo</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/js/bootstrap.min.js"></script>    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://getbootstrap.com/2.3.2/assets/js/bootstrap-alert.js"></script>
-    <script type="text/javascript" src="Source/bootstrap-notify.js"></script>
-    <script type="text/javascript" src="Source/require.js"></script>
-    <link href="Source/bootstrap-notify.css" rel="stylesheet">
-    <link href="Source/alert-blackgloss.css" rel="stylesheet">
+    <script type="text/javascript" src="Source/js/bootstrap-notify.js"></script>
+    <script type="text/javascript" src="Source/js/require.js"></script>
+    <link href="Source/css/bootstrap-notify.css" rel="stylesheet">
+    <link href="Source/css/alert-blackgloss.css" rel="stylesheet">
     <script type="text/javascript">
     require.config({
-        baseUrl : '/Source',
+        baseUrl : '/Source/js',
         waitSeconds : 60
     });
     </script>
@@ -27,11 +27,7 @@
             width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
         }
         @import url(../templates/bucket.css);
-        #toolbar {
-          position: relative;
-          top: -150px;
-          left: 200px;
-        }
+
         #viewChanged {
           display: none;
           background-color: red;
@@ -59,33 +55,33 @@
             opacity: 1;
         }
         #no-drone-zone {
-          display: block;
-          position: relative;
+          margin: 0;
+          padding: 0;
+          list-style-type: none;
+          text-align: center;
         }
         #no-drone-zone #message {
-          display: block;
           float: right;
-          width: 40%;
-          position: relative;
-          top: 20px;
+          width: 70%;
+          padding: 3px;
         }
         #no-drone-zone img {
-          width: 110px;
-          height: 120px;
-          display: inline;
+          width: 4em;
+          height: 5em;
           padding: 0;
         }
-        #no-drone-zone .close {
+        /*#no-drone-zone .close {
           opacity: 1;
           z-index: 10000000;
-        }
+        }*/
         #notifications {
-          display: none;
-          padding: 10px 20px;
-          width: 33%;
+          display: block;
+          padding: 0.5em 1em;
+          width: 25%;
           position: absolute;
-          top: 0;
-          left: 0;
+        }
+        #no-drone-zone li {
+          display: inline;
         }
         #container {
           position: relative;
@@ -93,7 +89,11 @@
           height: 100%;
         }
         #toolbar {
-          display: none;
+          display: block;
+          float: right;
+          position: relative;
+          top: -9em;
+          left: -0.5em;
         }
     </style>
 
@@ -101,21 +101,22 @@
 <body>
 <div id="container">
   <div id="notifications" class="alert-blackgloss notifications top-left">
-    <div id="no-drone-zone"><img src="Source/no_drone_zone.png"></img>
-      <div id="message">You are approaching a no-fly zone. Divert your course.</div>
-      <div id="close" class="close"></div>
-    </div>
+    <ul id="no-drone-zone">
+        <li><img src="Source/images/no_drone_zone.png"></img></li>
+        <li><div id="message">You are approaching a no-fly zone. Divert your course.</div></li>
+        <!--<li><div id="close" class="close"></div></li>-->
+    </ul>
   </div>
   <div id="cesiumContainer" class="fullSize"></div>
   <div id="loadingOverlay"><h1>Loading...</h1></div>
   <div id="toolbar"><div id="viewChanged">View Changed</div></div>
-  <div id="drone-land"><img src="Source/drone_blue.png"></div>
-  <div id="no-drone-zone"><img src="Source/no_drone_zone.png"></div>
+  <div id="drone-land"><img src="Source/images/drone_blue.png"></div>
+  <div id="no-drone-zone"><img src="Source/images/no_drone_zone.png"></div>
 </div>
   <footer>
-    <script type="text/javascript" src="/Source/Sandcastle-header.js"></script>
+    <script type="text/javascript" src="/Source/js/Sandcastle-header.js"></script>
     <script src="ThirdParty/Cesium/Cesium.js"></script>
-    <script src="Source/App.js"></script>
+    <script src="Source/js/App.js"></script>
   </footer>
 </body>
 </html>
